# gpt-neox

./: pyproject.toml
scripts/gslm/: 1node.sh  dataset.yml  run_1node.sh
